# apiclient/src/models/pda-calc-budget-amount-input.ts
@@ -1,0 +1,50 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * 抄表系统 - Pda抄表
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * OpenAPI spec version: v1
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+/**
+ * 预算 开账接口请求
+ * @export
+ * @interface PdaCalcBudgetAmountInput
+ */
+export interface PdaCalcBudgetAmountInput {
+    /**
+     * 客户编号
+     * @type {number}
+     * @memberof PdaCalcBudgetAmountInput
+     */
+    custId?: any;
+    /**
+     * 本次抄码
+     * @type {number}
+     * @memberof PdaCalcBudgetAmountInput
+     */
+    reading?: any;
+    /**
+     * 抄表状态
+     * @type {number}
+     * @memberof PdaCalcBudgetAmountInput
+     */
+    readStateId?: any;
+    /**
+     * 抄见水量
+     * @type {number}
+     * @memberof PdaCalcBudgetAmountInput
+     */
+    readWater?: any;
+    /**
+     * 抄表时间
+     * @type {Date}
+     * @memberof PdaCalcBudgetAmountInput
+     */
+    readDate?: any;
+}
